fix: white-space nowrap permanente no preview do texto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,8 @@ button:hover {
 
     z-index: 3;
 
+    white-space: nowrap;
+
     font-family: 'HemiHead', 'Segoe UI', sans-serif;
 
 }
@@ -277,6 +279,8 @@ button:hover {
     text-transform: uppercase;
 
     z-index: 3;
+
+    white-space: nowrap;
 
     font-family: 'HemiHead', 'Segoe UI', sans-serif;
 
